Compresses personal photos more, and adds scrollbar element color fix

--- a/css/content.css
+++ b/css/content.css
@@ -14,6 +14,15 @@ body {
 ::-moz-selection {
   background: #BDC3C7;
 }
+::-webkit-scrollbar-track {
+    background: #F3F5F6;
+}
+::-webkit-scrollbar-thumb {
+    background: rgba(102, 102, 102, 1);
+}
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(102, 102, 102, .75);
+}
 
 /*Contextuals*/
 .collapsed {
